--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon -w src --exec \"babel-node src\"",
-    "build": "babel src --out-dir dist" 
+    "build": "babel src --out-dir dist",
+    "start": "node dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -18,16 +19,15 @@
   },
   "homepage": "https://github.com/Muskandew07/ecommerce-backend#readme",
   "dependencies": {
+    "dotenv": "^16.0.0",
     "express": "^4.17.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15",
     "@babel/cli": "^7.16.0",
     "@babel/core": "^7.16.0",
     "@babel/node": "^7.16.0",
+    "@babel/plugin-transform-runtime": "^7.16.4",
     "@babel/preset-env": "^7.16.4",
-    "@babel/plugin-transform-runtime": "^7.16.4"
+    "nodemon": "^2.0.15"
   }
-
-  }
-
+}
